--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -17,7 +17,7 @@ import Container from "./Container.astro";
       You can donate money and help us to cover the costs of the development of the first version of Fordem.<br> 
       You can donate expertise and come and join us, and help with marketing, design, fundraising, project management experience and/or spreading good energy and love.<br>
       You can donate your time and opinion and test Fordem as soon as the first version is out and give us your honest and constructive feedback.<br>
-      Let us promote democractic systems together. Find us on<br><a href="https://github.com/tcfev/Fordem/discussions"><u>GitHub</u></a>
+      Let us promote democractic systems together. Find us on <a href="https://github.com/tcfev/Fordem/discussions"><u>GitHub</u></a>
       <br>
       <br>
       <u>What is Fordem?</u><br>
@@ -35,7 +35,7 @@ import Container from "./Container.astro";
       create and interactively flesh out their multifaceted profile and connect with people who strive for similar changes as they do,
       organise events and meetings, deliberate different aspects of the revolution
       Initiate and take part in polls and surveys and figure out the social choice
-      Form local mesh wireless networks when internet and electricity is shut down
+      Form local mesh wireless networks when internet and electricity is shut down.
       <br>
       <br>
     <u>How are we going to do that?</u><br>
@@ -99,7 +99,7 @@ import Container from "./Container.astro";
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 70%;
+  width:100%;
 }
 
 td, th {
@@ -121,7 +121,7 @@ tr:nth-child(even) {
     text-align: left;
   }
   h2 {
-    width: 200px;
+    width: 600px;
     font-size: 40px;
     font-weight: bold;
   }
