--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import Container from "./Container.astro";
       <span>Democracy</span>
     </h1>
     <p>
-      Fordem, an abbreviation of ‘for democracy’, is a digital democracy and socio-political mobilisation platform, with participation, deliberation, and networking functionalities.
+      Fordem, an abbreviation of ‘for democracy’, is a digital democracy and socio-political mobilisation platform, with participation, deliberation, and networking functionalities.<br><br>
     </p>
     <br />
     <Button variant="secondary" size="small" text="Read more" link="#aboutus" />
@@ -40,7 +40,7 @@ import Container from "./Container.astro";
     color: var(--primary-color);
   }
   p {
-    width: 60%;
+    width: 80%;
     font-size: 16px;
     font-weight: bold;
     margin-top: 30px;
