moving on with the style

--- a/src/components/ActiveEvents.astro
+++ b/src/components/ActiveEvents.astro
@@ -7,7 +7,7 @@ const MOCK_DATA = [
 ];
 ---
 
-<Container size="small">
+<Container size="big">
   <aside>
     <h2>Active projects & News</h2>
     <p></p>
