--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -23,6 +23,7 @@ import Container from "./Container.astro";
     justify-content: space-between;
     align-items: center;
     margin-top: 25px;
+    font-size: 100%;
   }
   h1 {
     font-size: 30px;
@@ -34,7 +35,7 @@ import Container from "./Container.astro";
     column-gap: 30px;
   }
   a {
-    font-size: 20px;
+    font-size: 2.2vw;
     font-weight: bold;
   }
 </style>
