changed card size

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -134,7 +134,7 @@ tr:nth-child(even) {
 
   @media (max-width: 800px) {
     section {
-      text-align: justify ;
+      text-align: left ;
       width: 100%;
       flex-direction: column;
       margin-top: 10px;
