--- a/src/components/ActiveEvents.astro
+++ b/src/components/ActiveEvents.astro
@@ -1,8 +1,9 @@
 ---
 import Container from "./Container.astro";
 
-const MOCK_DATA = [
+const DATA = [
   { title: "How democratic is Heilbronn?", link: "https://docs.google.com/document/d/1TLOEqupvUqbZKbLUvG8gzpsz5paJF7KVAoyDPw-Tq2o/edit" },
+
   // { title: "", link: "" },
 ];
 ---
@@ -15,7 +16,7 @@ const MOCK_DATA = [
 </Container>
 <section>
   {
-    MOCK_DATA.map((i) => (
+    DATA.map((i) => (
       <div class="card">
         <h3 class="card-title"><span><a href={i.link}><u>{i.title}</u></a></span></h3>
         <div>
@@ -48,7 +49,6 @@ const MOCK_DATA = [
     max-width: 480px;
   }
   section {
-    width: 700px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -98,7 +98,7 @@ const MOCK_DATA = [
     .card {
       margin: auto;
       margin-top: 10px;
-      max-width: 35%;
+      max-width: 50%;
     }
   }
 </style>
