added GH link and icon

--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -4,7 +4,7 @@ import Container from "./Container.astro";
 
 <Container size="big">
   <nav>
-    <h1>Fordem</h1>
+    <a href="https://github.com/tcfev/fordem"><i class="fa fa-github" style="font-size:36px"></i></a>
     <div>
       <a href="https://app.fordem.org/public/local">Go to web app!</a>
     </div>
