--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -56,3 +56,7 @@ import Container from "./Container.astro";
     }
   }
 </style>
+
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
