--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -1,124 +1,72 @@
----
-import Container from "./Container.astro";
----
+<Container>
+  <h1>Fordem | for democracy | برای مردم‌گردانی</h1>
+  <h2>A censorship-resistant digital emocracy platform</h2>
+  <p>
+    Fordem is a digital democracy and socio-political mobilisation platform,
+    with various social functions built to facilitate participation,
+    community-building and organisation.
+  </p>
 
-<Container size="big">
-  <section id="aboutus">
-    <h2>Who, what, why…?</h2>
-    <p>
-      <u>What is Fordem?</u><br>
-      Fordem app (WIP) forms independent WiFi-Direct & Bluetooth mesh networks when the internet and cellular networks are down, respects privacy and is oriented on data security. Fordem is a part of Fediverse and can be used as app on your smartphone or as desktop-client. Fordem aims to be the main channel for networking and conversations of resistance and resilience, social struggles and sociopolitical mobilisation, and it is there to make the voices of civil society movements heard and to maximise their impact. What can you do with Fordem? You can connect with others based on your shared interests, exchange ideas, initiate or join groups and organise for the changes you want to see in your neighbourhood or in the world. Fordem can connect an endless number of communities. 
-      <br>
-      <br>
-    <u>Fordem short-term goal:</u><br>
-      Fordem is a tool which can help the development of any community since it can be adapted to the respective needs and contexts. In our first version we are invested in providing the Iranian political activists the tools they will need at each of the networking, deliberation and participation stages of their mobilisation, organisation and self-reflection along the ongoing Women, Life, Freedom revolution in Iran.
-      <br>
-      Furthermore, we are invested in implementing Fordem in communities with a democratic gap in Germany. Our focus is on Heilbronn, a city with more than 54% of the population having (family) experiences with migration but form only 5% of the members of the municipal council. In the long term Fordem has the potential to be the tool for any community worldwide and connect an endless number of communities with each other. In this sense it can strengthen local communities while connecting them with the world.
-      <br>
-      <br>
-    <u>The activists will have the possibility to:</u><br>
-      Identify themselves through a pseudonymisation process done by a trusted third party,
-      create and interactively flesh out their multifaceted profile and connect with people who strive for similar changes as they do,
-      organise events and meetings, deliberate different aspects of the revolution
-      Initiate and take part in polls and surveys and figure out the social choice
-      Form local mesh wireless networks when internet and electricity is shut down.
-      <br>
-      <br>
-    <u>How are we going to do that?</u><br>
-      Fordem is an open-source platform. At its backend lies Nextodon, an extended version of Mastodon that we have written in C# with gRPC, crypto wallet, advanced votes, E2EE DMs and so on. As a mobile app, Fordem has large-scale mesh network formation abilities using WiFi, WFD and BT for the times of no internet, next to usual Mastodon. A DHT on the Nextodon takes care of synchronisation between databases of the networks that emerge from offline modes.
-      <br>
-      <br>
-      For more insights also check our issue tracker and documentation on Github:
-      <a href="https://github.com/tcfev/Fordem"><u>Fordem</u></a> & <a href="https://github.com/tcfev/Nextodon"><u>Nextodon</u></a>
-      <br>
-      <br>
-      <u>Development timeline:</u><br>
-      June 30, 2023<br>
-      Release will include Nextodon<br>
-      Nextodon’s Registration | Authentication features (Mnemonic phrases & crypto wallets) <br>
-      Basic Digital democracy functionalities<br>
-      <br>
-      Aug 28, 2023<br>
-      enable Ethereum wallet<br>
-      enable ranked-pairs, quadratic/fractional voting systems<br>
-      enable Twitter authentication<br>
-      <br>
-      Sep 31, 2023<br>
-      integration of  Zemi - GIS<br>
-      deliberation processes & instance as a service<br>
-      Questionnaires & assisted networking<br>
-      <br>
-      Nov 30, 2023<br>
-      release Fordem Flutter app<br>
-      enable mesh network formation features<br>
-      Audio rooms<br><br>
-      <u>Who is behind the project?</u><br>
-      We are the developers of this censorship-resistant sociopolitical network. Our volunteer team is transnational, heterarchical and committed to human rights and fundamental freedoms. 
+  <section>
 
-      We met in a hackathon of Update Deutschland and joined forces and expanded globally because we were working on similar ideas. Organizationally, Fordem is a project of Transnational Community Federation e. V. (TCF). TCF is a non-profit, not-governmental heterarchical civic innovation Lab. With our interdisciplinary approach, we bring about positive changes in our communities around the world. We are active in various fields including promotion of education, democratic systems, and demarginalization. For more information check  <a href="https://TransCF.org"><u>TransCF</u></a>
-      <br> 
-      <br>
-      <u>How can you support?</u><br>
-      There are many ways in which you can support Fordem.<br>
-      You can donate money and help us to cover the costs of the development of the first version of Fordem.<br> 
-      You can donate expertise and come and join us, and help with marketing, design, fundraising, project management experience and/or spreading good energy and love.<br>
-      You can donate your time and opinion and test Fordem as soon as the first version is out and give us your honest and constructive feedback.<br>
-      Let us promote democractic systems together. Find us on <a href="https://github.com/tcfev/Fordem/discussions"><u>GitHub</u></a>
-    </p>
+    # Fordem | for democracy | برای مردم‌گردانی
+    ## A censorship-resistant digital emocracy platform  
+      
+    Fordem is a digital democracy and socio-political mobilisation platform, with various social functions built to facilitate participation, community-buidling and organisation.
+      
+    **Who is behind the project?**  
+    We are based at the tech department of [TCF e. V.](https://transcf.org), a member-funded non-profit civic innotavation lab.
+    Fordem is a member of [Vernetzung Bürger:Innenbeteiligung](https://wechange.de/group/vernetzung-buergerinnenbeteiligung/) in Germany and an active member of Iranian Woman Life Freedom movement.  
+    
+    **Fordem short-term goals:**  
+    Fordem is a tool for development of any community as it can be adapted to the respective needs and contexts. In our first version we aim to assist Iranian political activists in networking, deliberation and participation stages of their mobilisation along the ongoing Woman, Life, Freedom movement.  
+    
+    Furthermore, we are invested in implementing Fordem in communities in Germany suffering from a democratic gap. Our main forcus ther is Heilbronn, a city with more than 54% of the population with migratory background but only 5% of the seats in the municipal council.
+    
+    Our long-term goal is to adapt Fordem for various democratic needs of every community around the world and to connect these communities to an interconnected and transnationally aware whole. 
+      
+    **How are we going to do that?**  
+    Fordem is an open-source platform, it is developed in direct collaboration with the civil society, has a crypto economy that gives back to the users if any profit is generated e.g. when news agencies pay to use the survey results (yes, it's not free for those!), provides the users with community building and organisation tools, and is hosted and managed by a non-profit federation.  
+      
+    **Activists will have the possibility to:** (Diaspora in case of Iran)
+    - Identify themselves through a pseudonymisation process done by a trusted 3rd parties
+    - Create and interactively flesh out their multifaceted profiles
+    - Connect with like-minded people and groups 
+    - Organise events and meetings  
+    - Collaboratively ideate
+    - Utilise various socials functions to find the social choice 
+    - Find and form representative groups for more elaborate democratic processes e.g. deliberation  
+      
+    **Data**  
+    Everything is treated according to the GDPR. We do not store or keep PII without users' explicit request.  
+    Furthermore the Data generated by the users will in part go on chain using smart contracts, or stored on a federated system. That said, using different licensing techniques we ensure for-profit organisations pay for their usage of the output and the profit goes back to users who generated the value as well as to the further development of the platform to reflect the users' needs.  
+    
+    We actively look for [`developers`](https://github.com/tcfev/Fordem/issues/61), members of board of trustess and external auditors [`in general`](https://github.com/tcfev/Fordem/discussions/52).  
+    
+    #
+    * [Organisation & Component Overview](https://github.com/tcfev/fordem/blob/main/.assets/organisation.md) (EN)
+    
+    * Organisation & Component Overview (فارسی):  
+      
+    
+    ![Alt](.assets/big-picture-per.drawio.png)
+    * [Our Values & principles](https://github.com/tcfev/fordem/issues/57)
+    * [Protocols](https://github.com/tcfev/fordem/tree/main/.assets/.protocols)
+    #
+    
+    **UI Design**  (WIP)
+    * [Figma design](https://www.figma.com/file/VHFRoqXfhc2ThZQMZUXcje/%D8%A8%D8%B1%D8%A7%DB%8C-%D9%85%D8%B1%D8%AF%D9%85%E2%80%8C%D8%B3%D8%A7%D9%84%D8%A7%D8%B1%DB%8C%2Ff%C3%BCrDem?node-id=0%3A1)  
+    * [UX-flowchart](https://github.com/tcfev/Fordem/blob/main/.assets/ux-flowchart.md) 
+    * [Brand-identity](https://github.com/tcfev/Fordem/blob/main/.assets/brand-identity.md)  
+    
   </section>
-  <br> 
-</Container>
 
-<style>
+  <Content src="organisation.md" />
 
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width:100%;
-}
+  <img src=".assets/big-picture-per.drawio.png" alt="Alt text for the image" />
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
+  <p>
+    * [Organisation & Component Overview](https://github.com/tcfev/fordem/blob/main/.assets/organisation.md) (EN)
+  </p>
 
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-
-  section {
-    width: 800px;
-    display: flex;
-    margin-top: 200px;
-    margin-right: auto;
-    margin-left: auto;
-    text-align: left;
-  }
-  h2 {
-    width: 600px;
-    font-size: 40px;
-    font-weight: bold;
-  }
-  p {
-    width: 100%;
-    font-size: 16px;
-    font-weight: bold;
-    line-height: 1.7rem;
-  }
-
-  @media (max-width: 800px) {
-    section {
-      text-align: left ;
-      width: 100%;
-      flex-direction: column;
-      margin-top: 10px;
-    }
-    h2 {
-      font-size: 7vw;
-    }
-    p {
-      margin-top: 30px;
-    }
-  }
-</style>
+  </Container>
