--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <meta
       name="description"
-      content="the digital democracy and socio-political mobilisation platform, with participation, deliberation, and networking functionalities."
+      content="A digital democracy platform, and a civic service hub."
     />
   </head>
   <body>
