--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -4,9 +4,11 @@ import Container from "./Container.astro";
 <Container size="big">
   <h1>Fordem | for democracy | برای مردم‌گردانی</h1>
   <h2>A censorship-resistant digital democracy platform</h2>
+  <hr> <!-- Spacer -->
   <p>
     Fordem is a digital democracy and socio-political mobilization platform, with various social functions built to facilitate participation, community-building, and organization. 
-  </p>  
+  </p> 
+  <hr> <!-- Spacer --> 
   <section>
     <p>
       <h4>Who is behind the project?</h4>
