--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -65,14 +65,14 @@ import Container from "./Container.astro";
 
   <p>
     <h4>Further Reading<h4>
-      [Organisation & Component Overview](https://github.com/tcfev/fordem/blob/main/.assets/organisation.md) (EN)
+      Organisation & Component Overview - https://github.com/tcfev/fordem/blob/main/.assets/organisation.md (EN)
 
       Organisation & Component Overview (فارسی):
 
 
       ![Alt](.assets/big-picture-per.drawio.png)
-      * [Our Values & principles](https://github.com/tcfev/fordem/issues/57)
-      * [Protocols](https://github.com/tcfev/fordem/tree/main/.assets/.protocols)
+      * Our Values & principles - https://github.com/tcfev/fordem/issues/57
+      * Protocols - https://github.com/tcfev/fordem/tree/main/.assets/.protocols
 
       UI Design (WIP)
   </p>
